--- a/index.html
+++ b/index.html
@@ -5,109 +5,176 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICTAK</title>
-    <link rel="stylesheet" href="style/style.css">
-    <!-- <style>
-        a{
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-          color:white;
-          background-color: black;
-          }
-    </style> -->
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body background="images/pexels-krivec-ales-547114.jpg">
-
+<body>
     <!-- header start -->
-    <header>
-        <img src="images/pexels-torsten-dettlaff-347734.jpg" alt="" id="logo">
-        <nav class="navigation">
-            <a href="#">Home</a>
-            <a href="#">Courses</a>
-            <a href="#">Services</a>
-            <a href="#">About Us</a>
-            <a href="#">Contact Us</a>
 
+    <header id="header">
+
+        <h1>Blessy Varghsese</h1>
+
+        <nav class="navigation">
+            <a href="#home">Home</a><span>|</span>
+            <a href="#about">About</a><span>|</span>
+            <a href="#skill">Skills</a><span>|</span>
+            <a href="#education">Education</a><span>|</span>
+            <a href="#contact">Contact</a>
         </nav>
 
     </header>
 
     <!-- header end -->
 
-    <!-- Aside start -->
-    <div class="side">
-        <h3>Why to associate with ICT Academy?</h3><br>
-        <ul>
-            <li>Government supported and Industry led Program</li>
-            <li>scholarships and affordable fees model</li>
-            <li> shop for Students, Unemployed and Working professionals</li>
-        </ul>
-    </div>
-    <!-- Aside end -->
+    <!-- home start -->
+    <section id="home">
+        <h3>Hello Everyone!</h3><br>
+        <hr>
 
-    <!-- login start -->
-    <form action="#" class="login_page">
-        <h2>User Login</h2>
-        <br>
-        <label for="username">Username</label>
-        <br>
-        <input type="text" placeholder="Username">
-        <br><br>
-        <label for="password">Username</label>
-        <br>
-        <input type="password" placeholder="Password">
-        <br><br>
-        <button id="logg">Log In</button>
-        <!-- <input type="button" value="Log In"> -->
-        <br><br>
-        <h3>Need an account?</h3>
-        <a href="#">Sign Up</a>
+    </section>
+    <!-- home end -->
 
 
-    </form>
+    <!-- about start -->
 
-    <!-- login end -->
+    <section id="about">
+        <div class="aside">
+            <img src="image/me.png" alt="">
+        </div>
+        <div class="aboutme">
+            <h1>About me</h1>
+            <p>Thanks for your interest, here is a quick story
+                of me</p>
+            <hr>
+            <p>"I am Blessy Varghese completed a master's in computer applications.
+                I have worked as PHP Developer for 1 year at Squad Mind India; Kochi.
+                During my work as a PHP developer; we developed the project letzdeal.in and Yathrakaran.com .
+                We have used PHP CodeIgniter Framework for our projects.
+                And I worked as software support for 2 years at Business bay, Dubai.
+                Due to personal reasons take a career break and currently doing Full stack developer training at ICT."
+            </p>
+            <hr>
+            <hr>
+            <p>
+                "My ambition is to work in a professional atmosphere, seeking a career where I can utilize my
+                expertise and knowledge with an opportunity for growth and advancement. I would love to
+                work for an organization where my abilities are considered worth making a difference."
 
-    <!-- content start -->
-    <div class="container">
-        <div class="p-box">
-            <h4>ROBOTIC PROCESS AUTOMATION</h4>
-            <p>Robotic Process Automation (RPA) is the use of software with artificial intelligence (AI) and machine
-                learning capabilities to handle high-volume, repeatable tasks that previously required humans to
-                perform.</p>
-            <a href="#">Read more</a>
+            </p>
 
         </div>
-        <div class="p-box">
-            <h4>CERTIFIED PROGRAM IN DATA SCIENCE & ANALYTICS</h4>
-            <p>Data Scientist or Data Analyst is a hot job title right now. Their challenges are often pretty amazing
-                things which amuse people. So what do they do?</p>
-            <a href="#">Read more</a>
+
+    </section>
+    <!-- about end -->
+
+    <!-- skill start -->
+    <section id="skill">
+        <div class="sideimg">
+            <img src="/image/pexels-artūras-kokorevas-12271300.jpg" alt="">
         </div>
-        <div class="p-box">
-            <h4>ACCELERATED BLOCKCHAIN COMPETENCY DEVELOPMENT</h4>
-            <p>Accelerated Blockchain Development Program(ABCD) is a technology training programme facilitated by Govt.
-                of Kerala, that will be of high industry relevance in the coming years.The interested candidates will
-                have to register for an Entrance test .</p>
-            <a href="#">Read more</a>
-        </div>
-        <div class="p-box">
-            <h4>CERTIFIED SPECIALIST IN MACHINE LEARNING & ARTIFICIAL INTELLIGENCE</h4>
-            <p>Machine Learning jobs are high in demand and continue to be the winners in today’s world. This course is
-                complemented with the Data science course offering students a wider platform of recognition of Diploma
-                in both the fields.</p>
-            <a href="#">Read more</a>
+        <div class="myskill">
+            <h1>My Skills</h1>
+
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>PHP</li>
+                <li>MYSQL</li>
+                <li>Codeigniter</li>
+                <li>Time Management</li>
+                <li>Problem Solving</li>
+
+            </ul>
         </div>
 
-    </div>
-    <!-- content end -->
+    </section>
+    <!-- skill end -->
 
+    <!-- education start -->
+    <section id="education">
+        <h1>Education</h1>
+        <div class="educationlist">
+            <ul>
+                <li><b>IHRD college Palakkad</b>
+                    <ul>
+
+                        <li>November 2011-2014</li>
+                        <li>MCA</li>
+                    </ul>
+                </li>
+                <li>
+                    <hr>
+                    <hr>
+                    <hr>
+                    <b>Prajyothi Niketan College Thrissur</b>
+                    <ul>
+                        <li>June 2008-2011</li>
+                        <li>B.sc.Electronics</li>
+
+                    </ul>
+                </li>
+            </ul>
+        </div>
+
+    </section>
+    <!-- education end -->
+
+
+    <!-- contact start -->
+    <section id="contact">
+
+        <h1>Contact</h1>
+        <form action="#" class="contactform">
+            <label for="">Name</label>
+            <input type="text" placeholder="Blessy Varghese">
+            <br><br>
+            <label for="">Email</label>
+            <input type="text" placeholder="blessyvarghese93@gmail.com">
+            <br><br>
+            <label for="">Number</label>
+            <input type="text" placeholder="8086064812">
+            <br><br>
+            <label for="">Message</label>
+            <textarea name="" id="" cols="30" rows="5"></textarea>
+            <br><br>
+            <button id="cont"><b>Submit</b></button>
+            <br><br>
+        </form>
+
+    </section>
+
+    <!-- contact end -->
 
     <!-- footer start -->
+
     <footer>
-        <h3>Copyright@2022</h3>
+        <div class="footer1">
+            <nav class="links">
+                <a href="https://www.linkedin.com/in/blessy-leo-a33b00136/">LinkedIn<i class="fa fa-linkedin-square"
+                        style="color:blue;"></i></a><span>|</span>
+                <a href="#">Twitter<i class="fa fa-twitter" style="color:blue;"></i></a><span>|</span>
+                <a href="#">instagram<i class="fa fa-instagram" style="color:blue;"></i></a><span>|</span>
+                <a href="#">Google<i class="fa fa-google" style="color:blue;"></i></a><span>|</span>
+                <a href="#">Facebook<i class="fa fa-facebook-f" style="color:blue;"></i></a>
+
+            </nav>
+        </div>
+        <div class="footer2">
+            <a href="#header">TOP</a>
+            <h3>©Copyright 2050 by nobody. All rights reserved</h3>
+
+
+
+        </div>
+
     </footer>
     <!-- footer end -->
+
 
 
 </body>
