--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section id="about">
         <div class="aside">
-            <img src="image/me.png" alt="">
+            <img src="images/me.png" alt="">
         </div>
         <div class="aboutme">
             <h1>About me</h1>
@@ -74,7 +74,7 @@
     <!-- skill start -->
     <section id="skill">
         <div class="sideimg">
-            <img src="/image/pexels-artūras-kokorevas-12271300.jpg" alt="">
+            <img src="/images/pexels-artūras-kokorevas-12271300.jpg" alt="">
         </div>
         <div class="myskill">
             <h1>My Skills</h1>
