--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- skill start -->
     <section id="skill">
         <div class="sideimg">
-            <img src="/images/pexels-artūras-kokorevas-12271300.jpg" alt="">
+            <img src="images/pexels-artūras-kokorevas-12271300.jpg" alt="">
         </div>
         <div class="myskill">
             <h1>My Skills</h1>
